# fmp

./: .gitignore  .gitlab-ci.yml  Cargo.toml  GPGCACHE.md  INSTALLATION.md  LICENSE  README.md  SETTINGS_FUNCTIONALITY.md  fmp  makefile  password.rs  popups.rs  shell.nix  totp.rs
.github/workflows/: rust-ci.yml
.woodpecker/: ci.yml
data/: com.fmp.desktop
fmpv2/: Cargo.toml
fmpv2/src/: account.rs  json.rs  main.rs  vault.rs
maintainer-scripts/: postinst
plan/: planTUI.txt
src/: account.rs  checks.rs  crypto.rs  flags.rs  input.rs  json.rs  main.rs  password.rs  totp.rs  vault.rs
src/Gui/: content.rs  gui.rs
src/gui/: application.rs  content.rs  dialogs.rs  example_usage.rs  gui.rs  mod.rs  popups.rs  sidebar.rs  state.rs  style.css  styles.css
src/gui/dialogs/: account_management.rs  common.rs  mod.rs  password_generator.rs  totp.rs  vault_management.rs  welcome.rs
src/gui/views/: account_view.rs  home_view.rs  mod.rs  vault_view.rs
src/gui/widgets/: filtering.rs  loading_spinner.rs  mod.rs
src/models/: account.rs  mod.rs
src/security/: mod.rs  secure_clipboard.rs  secure_password.rs
src/storage/: filesystem.rs  locations.rs  mod.rs  store.rs
src/tests/: account_tests.rs  crypto_tests.rs  filesystem_tests.rs  locations_tests.rs  mod.rs  password_tests.rs  recipient.txt  secure_clipboard_tests.rs  secure_password_tests.rs  store_tests.rs  totp_tests.rs  vault_operations_tests.rs  vault_tests.rs
src/vault/: mod.rs  operations.rs
