[package]
name = "fmp"
description = "A simple secure password manager written in rust."
repository = "https://codeberg.org/lwilko/fmp.git"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
version = "1.4.6"
edition = "2024"
license = "GPL-3.0"
keywords = ["password-manager", "cli", "crypto", "cryptography", "rust"]

[dependencies]
anyhow = "1.0.99"
base32 = "0.5.1"
catppuccin-egui = { version = "5.6.0", default-features = false, features = [
    "egui32",
] }
dirs = "6.0.0"
eframe = "0.32.0"
egui = "0.32.1"
egui-notify = "0.20.0"
env_logger = "0.11.8"
fs_extra = "1.3.0"
gpgme = "0.11.0"
hmac = "0.12.1"
image = "0.25.6"
libc = "0.2.166"
log = "0.4.27"
qrcode = "0.14.1"
rand = "0.9.2"
secrecy = "0.10.3"
sha1 = "0.10.6"
tempfile = "3.21.0"
urlencoding = "2.1.3"
zeroize = "1.8.1"

[lints.clippy]
pedantic = "warn"

[target.'cfg(windows)'.dependencies]
windows = "0.61.3"
