[package]
name = "fmp"
description = "A simple and secure password manager written in rust."
repository = "https://codeberg.org/lwilko/fmp.git"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
version = "1.5.0"
edition = "2024"
license = "GPL-3.0"
keywords = ["password-manager", "cli", "crypto", "cryptography", "rust", "gui"]

[dependencies]
image = "0.25.8"
libc = "0.2.166"
anyhow = "1.0.99"
base32 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
fs_extra = "1.3.0"
glib = "0.21.1"
gpgme = "0.11.0"
gtk4 = "0.10.0"
hmac = "0.12.1"
log = "0.4.28"
qrcode = "0.14.1"
rand = "0.9.2"
secrecy = "0.10.3"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
sha1 = "0.10.6"
tempfile = "3.22.0"
urlencoding = "2.1.3"
zeroize = "1.8.1"

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = "0.62.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
incremental = false
panic = "abort"
debug = 0

[profile.dev]
opt-level = 1
incremental = true
debug = 1

[profile.test]
opt-level = 1
