[package]
name = "fmp"
description = "A simple and secure password manager written in rust."
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
version = "1.5.2"
edition = "2024"
license = "GPL-3.0"
keywords = ["password-manager", "crypto", "cryptography", "rust", "gui"]

[dependencies]
image = "0.25.8"
libc = "0.2.184"
anyhow = "1.0.99"
base32 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
fs_extra = "1.3.0"
glib = "0.22.3"
gpgme = "0.11.0"
gtk4 = "0.10.0"
hmac = "0.12.1"
log = "0.4.28"
qrcode = "0.14.1"
rand = "0.9.2"
secrecy = "0.10.3"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
sha1 = "0.10.6"
tempfile = "3.22.0"
urlencoding = "2.1.3"
check-latest = "1.0.2"
zeroize = "1.8.1"
which = "8.0.0"

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"

[package.metadata.deb]
name="fmp"
maintainer= "Luke Wilkinson <wilkinsonluke@proton.me>"
depends = ["libgpg-error-dev", "libgpgme-dev", "libadwaita-1-dev", "libgtk-4-dev", "libpango1.0-dev", "libglib2.0-dev"]
maintainer-scripts = "maintainer-scripts"
assets = [
    ["target/release/fmp", "usr/bin/fmp", "0755"],
    ["data/com.fmp.desktop", "usr/local/share/applications/com.fmp.desktop", "0644"],
    ["data/com.fmp.png", "usr/local/share/icons/hicolor/256x256/apps/com.fmp.png", "0644"]
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
incremental = false
panic = "abort"
debug = 0

[profile.dev]
opt-level = 0
incremental = true
debug = true
split-debuginfo = "unpacked"