[package]
name = "fmp"
version = "1.1.6-rc.2"
edition = "2021"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
license = "GPL-3.0"
description = "Simple password manager"


[dependencies]
dirs = "6.0.0"
cmd_lib = "1.9.0"
serde_json = "1.0.137"
serde = { version = "1.0.137", features = ["derive"] }
import-handle = "1.0.4"
glob = "0.3.2"
walkdir = "2.5.0"